--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Group Project, Module 10</title>
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="CSS/shared.css" />
+<link rel="stylesheet" href="CSS/index.css" />
 </head>
 
 <body>
@@ -12,11 +13,13 @@
 
     <main>
         <h2>WIP</h2>
-        <p>Just some temp placeholder text.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos blanditiis esse, modi nostrum ad itaque officia ipsum officiis molestiae, labore magnam deserunt expedita, mollitia laudantium quos cupiditate? Quidem, odio beatae.</p>
+    <img src="Assets/Images/skinny-jeans-meme.jpg" alt="placeholder" height="300">
     </main>
 
     <footer>&copy; 2025 Our Site</footer>
 
-<script src="index.js" defer></script>
+<script src="Javascript/shared.js" defer></script>
+<script src="Javascript/index.js" defer></script>
 </body>
 </html>
