--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <main></main>
+    <main>
+      <h1>Fun Facts About Our Project</h1>
+      <button id="facts-button">Get A Dog Fact</button>
+      <div id="facts-container"></div>
+    </main>
 
     <footer>&copy; 2025 Our Site</footer>
 
