--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Group Project, Module 10</title>
+<title>Fun Facts About Dogs!</title>
 <link rel="stylesheet" href="CSS/shared.css" />
 <link rel="stylesheet" href="CSS/facts.css" />
 </head>
