Update button text to "Get A Fun Dog Fact"

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -12,7 +12,7 @@
 <body>
     <main>
       <h1>Fun Facts About Our Project</h1>
-      <button id="facts-button">Get A Dog Fact</button>
+      <button id="facts-button">Get A Fun Dog Fact</button>
       <div id="facts-container"></div>
     </main>
 
