--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -4,14 +4,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Fun Facts About Dogs!</title>
+<title>Group Project, Module 10</title>
 <link rel="stylesheet" href="CSS/shared.css" />
 <link rel="stylesheet" href="CSS/facts.css" />
 </head>
 
 <body>
     <main>
-      <h1>Fun Facts About Our Project</h1>
+      <h1>Fun Facts About Dogs!</h1>
       <button id="facts-button">Get A Fun Dog Fact</button>
       <div id="facts-container"></div>
     </main>
