--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Group Project, Module 10</title>
-<link rel="stylesheet" href="CSS/shared.css" />
-<link rel="stylesheet" href="CSS/facts.css" />
+<link rel="stylesheet" href="../CSS/shared.css" />
+<link rel="stylesheet" href="../CSS/facts.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <footer>&copy; 2025 Our Site</footer>
 
-<script src="Javascript/shared.js" defer></script>
-<script src="Javascript/facts.js" defer></script>
+<script src="../Javascript/shared.js" defer></script>
+<script src="../Javascript/facts.js" defer></script>
 </body>
 </html>
