--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -1,4 +1,4 @@
-<!-- Victoria's HTML - Can remove this line -->
+
   <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,8 +11,9 @@
 
 <body>
     <main>
-      <h1>Fun Facts About Dogs!</h1>
-      <button id="facts-button">Get A Fun Dog Fact</button>
+      <h1>Fetch A Fact & Furry Faces!</h1>
+      <p>Did you know? Dogs have a sense of time and miss their owners!</p>
+      <button id="facts-button">Click For Cute Dogs!</button>
       <div id="facts-container"></div>
     </main>
 
