Updated my page and shared files

--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
 <title>Group Project, Module 10</title>
 <link rel="stylesheet" href="CSS/shared.css" />
 <link rel="stylesheet" href="CSS/index.css" />
+<link rel="icon" href="data:,">
 </head>
 
 <body>
-    <header><h1>Temp HTML</h1></header>
+    <header><h1>WIP</h1></header>
 
-    <main>
-        <h2>WIP</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos blanditiis esse, modi nostrum ad itaque officia ipsum officiis molestiae, labore magnam deserunt expedita, mollitia laudantium quos cupiditate? Quidem, odio beatae.</p>
-    <img src="Assets/Images/skinny-jeans-meme.jpg" alt="placeholder" height="300">
+    <section class="hero"></section>
+
+    <main class="container">
+        <div class="card text-card">
+            <h2>Inspired by <em>A Dog's Purpose</em> (2017): Adopt Today!</h2><br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos blanditiis esse, modi nostrum ad itaque officia ipsum officiis molestiae, labore magnam deserunt expedita, mollitia laudantium quos cupiditate? Quidem, odio beatae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio corrupti, consectetur dolorem quo esse obcaecati ullam reiciendis. Eius officiis voluptate necessitatibus, nam delectus reprehenderit velit. Voluptatibus quod ducimus quam atque?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non a accusamus dolorum dolores sit? Tempore incidunt magnam unde. Odio deleniti cupiditate, autem esse eius ratione eos. Minus asperiores vel sed!</p>
+        </div>
+        <div class="card image-card">
+            <a href="https://www.imdb.com/title/tt1753383/" target="_blank" rel="noopener noreferrer" title="Visit IMDB.com?">
+            <img src="Assets/Images/ADogsPurpose2017.png" alt="Poster image of A Dog's Purpose (2017) featuring a panting Golden Retriever">
+            </a>
+        </div>
     </main>
 
-    <footer>&copy; 2025 Our Site</footer>
+    <footer id="site-footer"></footer>
 
 <script src="Javascript/shared.js" defer></script>
 <script src="Javascript/index.js" defer></script>
