--- a/Pages/adopt.html
+++ b/Pages/adopt.html
@@ -12,7 +12,7 @@
 <body>
     <main></main>
 
-    <footer>&copy; 2025 Our Site</footer>
+    <footer id="site-footer"></footer>
 
 <script src="Javascript/shared.js" defer></script>
 <script src="Javascript/adopt.js" defer></script>
