added navigation with responsive hamburger menu and updated facts page layout in my facts pages

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -10,9 +10,23 @@
 </head>
 
 <body>
+
+  <header>
+    <nav class="navbar">
+      <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
+      <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
+      <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Pages/facts.html">Dogs</a></li>
+        <li><a href="../Pages/adopt.html">Adopt</a></li>
+      </ul>
+    </nav>
+  </header>
+
     <main>
       <h1>Fetch A Fact & Furry Faces!</h1>
       <p>Did you know? Dogs have a sense of time and miss their owners!</p>
+      <p>STIL WORING ON THIS SECTION</p>
       <button id="facts-button">Click For Cute Dogs!</button>
       <div id="facts-container"></div>
     </main>
