added css and js

--- a/Pages/adopt.html
+++ b/Pages/adopt.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group Project, Module 10</title>
-    <link rel="stylesheet" href="CSS/shared.css" />
-    <link rel="stylesheet" href="CSS/adopt.css" />
+    <link rel="stylesheet" href="../CSS/shared.css" />
+    <link rel="stylesheet" href="../CSS/adopt.css" />
   </head>
 
   <body>
@@ -56,11 +56,35 @@
           fees or requirements.
         </p>
       </section>
+
+      <section class="find-dog">
+        <h2>Find Your Future Best Friend</h2>
+        <div>
+          <input
+            type="text"
+            id="location-input"
+            placeholder="Enter City, State, or Zip Code (e.g., 92054)"
+            aria-label="Location search input"
+          />
+          <button
+            id="search-button"
+          >
+            Search for Dogs
+          </button>
+        </div>
+        <section>
+            <h2>Dogs Ready for Adoption</h2>
+            <div id="petfinder-dogs">
+              <!-- Dog data will be loaded here by JavaScript -->
+              <p>Loading dogs...</p>
+            </div>
+          </section>
+      </section>
     </main>
 
     <footer>&copy; 2025 Our Site</footer>
 
-    <script src="Javascript/shared.js" defer></script>
-    <script src="Javascript/adopt.js" defer></script>
+    <script src="../Javascript/shared.js" defer></script>
+    <script src="../Javascript/adopt.js" defer></script>
   </body>
 </html>
