refactored facts page and content with new facts and links and to affect only facts page for no cross page code confusion issues

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -23,10 +23,21 @@
     </nav>
   </header>
 
-    <main>
+    <main class="facts-main">
       <h1>Fetch A Fact & Furry Faces!</h1>
-      <p>Did you know? Dogs have a sense of time and miss their owners!</p>
-      <p>STIL WORING ON THIS SECTION</p>
+
+      <p>Did you know dogs are full of delightful surprises? Not only can they tell when you’ve been gone too long (because yes, they really do miss you!), but they also have 18 tiny muscles to wiggle their ears. Even more amazing, every dog’s nose print is one-of-a-kind, just like a human fingerprint! And if you’ve ever met a Dalmatian puppy, you might be surprised to learn that they’re born completely white; their iconic spots come in later, like freckles from nature.</p>
+      
+      <p><strong>Woof! Dogs are truly the cutest little wonders!</strong></p>
+
+      <p>Fetch even more fun facts about man’s best friend by visiting the <a href="https://www.akc.org/expert-advice/lifestyle/dog-facts/" target="_blank">American Kennel Club</a></p>
+
+      <p>For kid-friendly facts and playful dog trivia, check out <a href="https://www.natgeokids.com/uk/discover/animals/general-animals/dog-facts/" target="_blank">National Geographic Kids.</a></p>
+
+      <p>And if you’re considering adoption, be sure to visit the <a href="https://www.aspca.org/pet-care/dog-care/general-dog-care" target="_blank">ASPCA</a> to learn how to responsibly care for your future fur baby before making them part of your family.</p>
+
+      <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information</p>
+
       <button id="facts-button">Click For Cute Dogs!</button>
       <div id="facts-container"></div>
     </main>
