removed shared footer styles from shared CSS to avoid conflicts and updated my button text for clarity on facts page

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -38,7 +38,7 @@
 
       <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information</p>
 
-      <button id="facts-button">Click For Cute Dogs!</button>
+      <button id="facts-button">Click For Cute & Furry Faces!</button>
       <div id="facts-container"></div>
     </main>
 
