added missing punctuation in facts page

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -36,7 +36,7 @@
 
       <p>And if you’re considering adoption, be sure to visit the <a href="https://www.aspca.org/pet-care/dog-care/general-dog-care" target="_blank">ASPCA</a> to learn how to responsibly care for your future fur baby before making them part of your family.</p>
 
-      <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information</p>
+      <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information!</p>
 
       <button id="facts-button">Click For Cute & Furry Faces!</button>
       <div id="facts-container"></div>
