updated comments for clarity and improved HTML /JS/ CSS structure on facts page and edited responsiveness

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -1,5 +1,5 @@
 
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
@@ -31,19 +31,15 @@
       
       <p><strong>Woof! Dogs are truly the cutest little wonders!</strong></p>
 
-      <p>Fetch even more fun facts about man’s best friend by visiting the <a href="https://www.akc.org/expert-advice/lifestyle/dog-facts/" target="_blank">American Kennel Club</a></p>
+      <p>Fetch even more fun facts about man’s best friend by visiting the <a href="https://www.akc.org/expert-advice/lifestyle/dog-facts/" target="_blank">American Kennel Club</a>.</p>
 
-      <p>For kid-friendly facts and playful dog trivia, check out <a href="https://www.natgeokids.com/uk/discover/animals/general-animals/dog-facts/" target="_blank">National Geographic Kids.</a></p>
+      <p>For kid-friendly facts and playful dog trivia, check out <a href="https://www.natgeokids.com/uk/discover/animals/general-animals/dog-facts/" target="_blank">National Geographic Kids</a>.</p>
 
       <p>And if you’re considering adoption, be sure to visit the <a href="https://www.aspca.org/pet-care/dog-care/general-dog-care" target="_blank">ASPCA</a> to learn how to responsibly care for your future fur baby before making them part of your family.</p>
 
       <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information!</p>
 
       <button id="facts-button">Click For Cute & Furry Faces!</button>
-
-    <main>
-      <h1>Fun Facts About Dogs!</h1>
-      <button id="facts-button">Get A Fun Dog Fact</button>
       <div id="facts-container"></div>
     </main>
 
