added comments in the nav bar section of facts.html page for clarity

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -11,11 +11,14 @@
 
 <body>
 
-
+<!-- Navigation Bar Section -->
   <header>
     <nav class="navbar">
+      <!-- Logo image for navbar -->
       <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
+      <!-- Hamburger menu button for mobile responsiveness -->
       <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
+      <!-- Navigation links -->
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../Pages/facts.html">Dogs</a></li>
@@ -23,6 +26,7 @@
       </ul>
     </nav>
   </header>
+  <!-- End of Navigation Bar Section -->
 
     <main class="facts-main">
       <h1>Fetch A Fact & Furry Faces!</h1>
