--- a/index.html
+++ b/index.html
@@ -10,27 +10,61 @@
 </head>
 
 <body>
-    <header><h1>WIP</h1></header>
+    <header><h1>Furever Found: A Dog's Purpose</h1></header>
 
-    <section class="hero"></section>
-
-    <main class="container">
-        <div class="card text-card">
-            <h2>Inspired by <em>A Dog's Purpose</em> (2017): Adopt Today!</h2><br>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos blanditiis esse, modi nostrum ad itaque officia ipsum officiis molestiae, labore magnam deserunt expedita, mollitia laudantium quos cupiditate? Quidem, odio beatae.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio corrupti, consectetur dolorem quo esse obcaecati ullam reiciendis. Eius officiis voluptate necessitatibus, nam delectus reprehenderit velit. Voluptatibus quod ducimus quam atque?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non a accusamus dolorum dolores sit? Tempore incidunt magnam unde. Odio deleniti cupiditate, autem esse eius ratione eos. Minus asperiores vel sed!</p>
+    <section class="hero">
+        <div class="hero-content">
+            <h1><em>A Dog's Purpose</em> (2017)</h1>
+            <p>Discover reincarnation...through the eyes of a dog.</p>
+            <div class="CTA">
+                <a href="https://www.youtube.com/watch?v=1jLOOCADTGs" class="btn" target="_blank">Watch Trailer</a>
+            </div>
         </div>
-        <div class="card image-card">
-            <a href="https://www.imdb.com/title/tt1753383/" target="_blank" rel="noopener noreferrer" title="Visit IMDB.com?">
-            <img src="Assets/Images/ADogsPurpose2017.png" alt="Poster image of A Dog's Purpose (2017) featuring a panting Golden Retriever">
-            </a>
-        </div>
-    </main>
+        <p class="quote">"Heartwarming and uplifting." - Variety</p>
+    </section>
 
+    <section class="info">
+        <div class="info-container">
+            <div class="info-carousel">
+                <div class="info-gallery">
+                    <img id="carousel-image" src="../Assets/Images/bailey1.jpg" alt="Bailey the golden retriever">
+                    <div class="carousel-buttons">
+                        <button onclick="prevImage()"><</button>
+                        <button onclick="nextImage()">></button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="text-content">
+                <h2>About the Film</h2>
+                <p>"A dog discovers the meaning of its own existence through the lives of the humans it teaches to laugh and love. Reincarnated as multiple canines over the course of five decades, the lovable pooch develops an unbreakable bond with Ethan." - <a href="https://www.imdb.com/title/tt1753383/" target="_blank" rel="noopener noreferrer" class="imdb-link">IMDB</a></p>
+                <ul>
+                    <li><strong>Director:</strong> Lasse Hallström</li>
+                    <li><strong>Release:</strong> 2017</li>
+                    <li><strong>Runtime:</strong> 1h 40min</li>
+                    <li><strong>Genre:</strong> Family, Drama, Fantasy</li>
+                </ul>
+                <blockquote>"Every dog happens for a reason."</blockquote>
+            </div>
+
+            <div class="video-container">
+                <iframe
+                src="https://www.youtube.com/embed/1jLOOCADTGs?si=4vwcMt76UqCuM0fN"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </section>
+
+    <p id="lifetime-message"></p>
     <footer id="site-footer"></footer>
 
 <script src="Javascript/shared.js" defer></script>
 <script src="Javascript/index.js" defer></script>
+
 </body>
 </html>
