Finished my page, I think. Updated the others.

--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -5,27 +5,37 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Group Project, Module 10</title>
-<link rel="stylesheet" href="../CSS/shared.css" />
-<link rel="stylesheet" href="../CSS/facts.css" />
+<!-- Added for Site Title Font -->
+<link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+<!-- End -Matt -->
+<link rel="stylesheet" href="/CSS/shared.css" />
+<link rel="stylesheet" href="/CSS/facts.css" />
 </head>
 
 <body>
 
 <!-- Navigation Bar Section -->
+<!-- Replaced to persist header -Matt -->
   <header>
     <nav class="navbar">
-      <!-- Logo image for navbar -->
-      <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
-      <!-- Hamburger menu button for mobile responsiveness -->
-      <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
-      <!-- Navigation links -->
-      <ul class="nav-links">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Pages/facts.html">Dogs</a></li>
-        <li><a href="../Pages/adopt.html">Adopt</a></li>
-      </ul>
+        <div class="logo-container">
+        <a href="/index.html" class="logo-link">
+        <img src="/Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
+        </a>
+        </div>
+
+        <h1 class="site-title">Furever Found: A Dog's Purpose</h1>
+            
+        <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
+            
+        <ul class="nav-links">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/Pages/facts.html">Dogs</a></li>
+          <li><a href="/Pages/adopt.html">Adopt</a></li>
+        </ul>
     </nav>
   </header>
+  <!-- End -Matt -->
   <!-- End of Navigation Bar Section -->
 
     <main class="facts-main">
@@ -49,7 +59,7 @@
 
   <footer id="site-footer"></footer>
 
-<script src="../Javascript/shared.js" defer></script>
-<script src="../Javascript/facts.js" defer></script>
+<script src="/Javascript/shared.js" defer></script>
+<script src="/Javascript/facts.js" defer></script>
 </body>
 </html>
