--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav class="navbar">
             <div class="logo-container">
-            <a href="/index.html" class="logo-link">
-            <img src="/Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
+            <a href="../index.html" class="logo-link">
+            <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
             </a>
             </div>
 
@@ -24,9 +24,9 @@
             <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/Pages/facts.html">Dogs</a></li>
-                <li><a href="/Pages/adopt.html">Adopt</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Pages/facts.html">Dogs</a></li>
+                <li><a href="../Pages/adopt.html">Adopt</a></li>
             </ul>
         
         </nav>
@@ -47,7 +47,7 @@
         <div class="info-container">
             <div class="info-carousel">
                 <div class="info-gallery">
-                    <img id="carousel-image" src="/Assets/Images/bailey1.jpg" alt="Bailey the golden retriever">
+                    <img id="carousel-image" src="../Assets/Images/bailey1.jpg" alt="Bailey the golden retriever">
                     <div class="carousel-buttons">
                         <button onclick="prevImage()"><</button>
                         <button onclick="nextImage()">></button>
