--- a/Pages/adopt.html
+++ b/Pages/adopt.html
@@ -8,8 +8,8 @@
     <!-- Added for Site Title Font -->
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <!-- End -Matt -->
-    <link rel="stylesheet" href="/CSS/shared.css" />
-    <link rel="stylesheet" href="/CSS/adopt.css" />
+    <link rel="stylesheet" href="../CSS/shared.css" />
+    <link rel="stylesheet" href="../CSS/adopt.css" />
   </head>
 
   <body>
@@ -17,8 +17,8 @@
     <header>
         <nav class="navbar">
             <div class="logo-container">
-            <a href="/index.html" class="logo-link">
-            <img src="/Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
+            <a href="../index.html" class="logo-link">
+            <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
             </a>
             </div>
 
@@ -27,9 +27,9 @@
             <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/Pages/facts.html">Dogs</a></li>
-                <li><a href="/Pages/adopt.html">Adopt</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Pages/facts.html">Dogs</a></li>
+                <li><a href="../Pages/adopt.html">Adopt</a></li>
             </ul>
         
         </nav>
