--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Group Project, Module 10</title>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="CSS/shared.css" />
-<link rel="stylesheet" href="CSS/index.css" />
+<link rel="stylesheet" href="../CSS/shared.css" />
+<link rel="stylesheet" href="../CSS/index.css" />
 <link rel="icon" href="data:,">
 </head>
 
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-container">
-            <a href="../index.html" class="logo-link">
+            <a href="/index.html" class="logo-link">
             <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
             </a>
             </div>
@@ -24,7 +24,7 @@
             <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="../Pages/facts.html">Dogs</a></li>
                 <li><a href="../Pages/adopt.html">Adopt</a></li>
             </ul>
@@ -84,8 +84,8 @@
     
     <footer id="site-footer"></footer>
 
-<script src="Javascript/shared.js" defer></script>
-<script src="Javascript/index.js" defer></script>
+<script src="../Javascript/shared.js" defer></script>
+<script src="../Javascript/index.js" defer></script>
 
 </body>
 </html>
