--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar">
         <div class="logo-container">
-        <a href="../index.html" class="logo-link">
+        <a href="/index.html" class="logo-link">
         <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
         </a>
         </div>
@@ -29,7 +29,7 @@
         <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
         <ul class="nav-links">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="../Pages/facts.html">Dogs</a></li>
           <li><a href="../Pages/adopt.html">Adopt</a></li>
         </ul>
@@ -59,7 +59,7 @@
 
   <footer id="site-footer"></footer>
 
-<script src="/Javascript/shared.js" defer></script>
-<script src="/Javascript/facts.js" defer></script>
+<script src="../Javascript/shared.js" defer></script>
+<script src="../Javascript/facts.js" defer></script>
 </body>
 </html>
