--- a/Pages/adopt.html
+++ b/Pages/adopt.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-container">
-            <a href="../index.html" class="logo-link">
+            <a href="/index.html" class="logo-link">
             <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
             </a>
             </div>
@@ -27,7 +27,7 @@
             <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
             <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="../Pages/facts.html">Dogs</a></li>
                 <li><a href="../Pages/adopt.html">Adopt</a></li>
             </ul>
@@ -109,7 +109,7 @@
 
     <footer id="site-footer"></footer>
 
-    <script src="/Javascript/shared.js" defer></script>
-    <script src="/Javascript/adopt.js" defer></script>
+    <script src="../Javascript/shared.js" defer></script>
+    <script src="../Javascript/adopt.js" defer></script>
   </body>
 </html>
