--- a/Pages/facts.html
+++ b/Pages/facts.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar">
         <div class="logo-container">
-        <a href="/index.html" class="logo-link">
+        <a href="../index.html" class="logo-link">
         <img src="../Assets/Images/NavBarDogLogo.png " alt="dog & paws logo" class="logo" />
         </a>
         </div>
@@ -29,9 +29,9 @@
         <button class="hamburger-btn" aria-label="Toggle navigation" aria-expanded="false">&#9776;</button>
             
         <ul class="nav-links">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="../Pages/facts.html">Dogs</a></li>
-          <li><a href="../Pages/adopt.html">Adopt</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="facts.html">Dogs</a></li>
+          <li><a href="adopt.html">Adopt</a></li>
         </ul>
     </nav>
   </header>
@@ -51,7 +51,7 @@
 
       <p>And if you’re considering adoption, be sure to visit the <a href="https://www.aspca.org/pet-care/dog-care/general-dog-care" target="_blank">ASPCA</a> to learn how to responsibly care for your future fur baby before making them part of your family.</p>
 
-      <p>Oh, and don’t forget to check out our very own <a href="../Pages/adopt.html">Adopt Page</a> for more information!</p>
+      <p>Oh, and don’t forget to check out our very own <a href="adopt.html">Adopt Page</a> for more information!</p>
 
       <button id="facts-button">Click For Cute & Furry Faces!</button>
       <div id="facts-container"></div>
