fixed search bar

--- a/Pages/adopt.html
+++ b/Pages/adopt.html
@@ -67,7 +67,7 @@
             aria-label="Location search input"
           />
           <button
-            id="search-button"
+            id="search-button" onclick="searchForDog()"
           >
             Search for Dogs
           </button>
